# nyx-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  audit_plan.txt  config.example.json  prompt.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.nyx/: repo_graph.json
.nyx/patches/: 1781090152_create_tmp_tmp0zxhk5e7_append.txt.patch  1781090152_create_tmp_tmpth26feaf_test.txt.patch  1781090152_modify_tmp_tmp0zxhk5e7_append.txt.patch  1781090199_create_tmp_tmpsyco2hnb_append.txt.patch  1781090199_create_tmp_tmpts4j8dks_test.txt.patch  1781090199_modify_tmp_tmpsyco2hnb_append.txt.patch  1781090239_create_tmp_tmp00yzlili_append.txt.patch  1781090239_create_tmp_tmpsjmt3jah_test.txt.patch  1781090239_modify_tmp_tmp00yzlili_append.txt.patch  1781090239_modify_tmp_tmp_y7o5bsu_newfile.txt.patch  1781090239_modify_tmp_tmpghh7wr9u_modify.txt.patch  1781090372_create_tmp_tmpqvirkmrp_append.txt.patch  1781090372_create_tmp_tmpwlq2rcfr_test.txt.patch  1781090372_modify_tmp_tmp00d95lh3_modify.txt.patch  1781090372_modify_tmp_tmp1_3zsh24_newfile.txt.patch  1781090372_modify_tmp_tmpqvirkmrp_append.txt.patch  1781090408_create_tmp_tmpb3f2r7pa_append.txt.patch  1781090408_create_tmp_tmpsxk_hdyu_test.txt.patch  1781090408_modify_tmp_tmpb3f2r7pa_append.txt.patch  1781090408_modify_tmp_tmplj_mu5z2_modify.txt.patch  1781090408_modify_tmp_tmpne732y1w_newfile.txt.patch  1781090441_create_tmp_tmpg4b__qar_append.txt.patch  1781090441_create_tmp_tmpuazp7p15_test.txt.patch  1781090441_modify_tmp_tmp0c8k6il8_modify.txt.patch  1781090441_modify_tmp_tmpg4b__qar_append.txt.patch  1781090441_modify_tmp_tmpmd4x_9gi_newfile.txt.patch  1781090595_create_tmp_tmp5i7qupv2_append.txt.patch  1781090595_create_tmp_tmpfampx1jj_test.txt.patch  1781090595_modify_tmp_tmp5i7qupv2_append.txt.patch  1781090595_modify_tmp_tmpj18p5jwg_modify.txt.patch  1781090595_modify_tmp_tmplvqw95v6_newfile.txt.patch  1781123436_create_tmp_tmp4e744qsv_test.txt.patch  1781123436_create_tmp_tmpyq51yy31_append.txt.patch  1781123436_modify_tmp_tmp8u52vq35_newfile.txt.patch  1781123436_modify_tmp_tmpxn9jyrqr_modify.txt.patch  1781123436_modify_tmp_tmpyq51yy31_append.txt.patch  1781123578_create_tmp_tmp1oelqhdc_append.txt.patch  1781123578_create_tmp_tmp4s4l99ut_test.txt.patch  1781123578_modify_tmp_tmp1oelqhdc_append.txt.patch  1781123578_modify_tmp_tmp38l5xpe6_modify.txt.patch  (+272 more)
.nyx/rollback/: 1781255510_tmp_tmpdremyhca_newfile.txt_521e4918.bak
nyx/: __init__.py  agent.py  approval.py  async_subagent.py  audit.py  cli.py  cli_rich.py  config.py  diff_tool.py  json_logger.py  mcp_client.py  mcp_discovery.py  memory.py  permissions.py  process_manager.py  rate_limiter.py  repl_controller.py  repo_map.py  sandbox.py  search_code.py  skill_manager.py  skill_worker.py  subagent.py  subagent_worker.py  terminal.py  test_loop.py  tools.py  web_search.py
nyx/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  openrouter.py
plans/: cli_analysis.md  command_permission_plan.md  empty_command_fix.md  fix_plan.md  markdown_fix_plan.md  performance_analysis.md
skills/: __init__.py  echo.py  format_json.py
tests/: __init__.py  test_agent.py  test_cli.py  test_config.py  test_core_upgrades.py  test_diff_tool.py  test_json_logger.py  test_mcp_mock.py  test_memory.py  test_new_features.py  test_providers_mock.py  test_rate_limiter.py  test_web_search.py
