[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "nyx"
version = "0.2.0"
description = "Zero-dependency agentic coding CLI — MCP, subagents, skills, web search, multi-provider"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Nyx Contributors" },
]
requires-python = ">=3.10"
keywords = ["agentic", "cli", "ai", "coding", "assistant", "mcp", "zero-dependency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/nyx-cli/nyx"
Repository = "https://github.com/nyx-cli/nyx"
Documentation = "https://github.com/nyx-cli/nyx#readme"
Issues = "https://github.com/nyx-cli/nyx/issues"

[project.optional-dependencies]
tui = ["rich>=13.0.0"]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1", "rich>=13.0.0"]

[project.scripts]
nyx = "nyx.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]