[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "nyx"
version = "0.2.1"
description = "Standard-library-first agentic coding CLI with guarded edits, MCP, skills, subagents, web search, and multi-provider support"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Nyx Contributors" },
]
requires-python = ">=3.10"
keywords = ["agentic", "cli", "ai", "coding", "assistant", "mcp", "standard-library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/nyx-cli/nyx"
Repository = "https://github.com/nyx-cli/nyx"
Documentation = "https://github.com/nyx-cli/nyx#readme"
Issues = "https://github.com/nyx-cli/nyx/issues"

[project.optional-dependencies]
tui = ["rich>=13.0.0"]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1", "rich>=13.0.0"]

[project.scripts]
nyx = "nyx.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nyx"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
