[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "nyx-cli"
version = "0.2.1"
description = "Standard-library-first agentic coding CLI with guarded edits, MCP, skills, subagents, web search, and multi-provider support"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nyx Contributors" },
]
requires-python = ">=3.10"
keywords = ["agentic", "cli", "ai", "coding", "assistant", "mcp", "standard-library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/zolaski333/nyx-cli"
Repository = "https://github.com/zolaski333/nyx-cli"
Documentation = "https://github.com/zolaski333/nyx-cli#readme"
Issues = "https://github.com/zolaski333/nyx-cli/issues"
Security = "https://github.com/zolaski333/nyx-cli/security/policy"

[project.optional-dependencies]
tui = ["rich>=13.0.0"]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1", "rich>=13.0.0", "build>=1.0", "twine>=5.0"]

[project.scripts]
nyx = "nyx.cli:main"

[tool.setuptools.packages.find]
include = ["nyx*"]
exclude = ["tests*", "skills*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
    "E402",  # Some modules adjust import paths or group optional imports after setup code.
    "E741",  # Existing code uses short loop variables in localized comprehensions.
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nyx"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
